--- a/.github/workflows/mac-distribution.yml
+++ b/.github/workflows/mac-distribution.yml
@@ -3,13 +3,18 @@ on:
 
 jobs:
   build:
-    runs-on: 'macos-latest'
-
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '2.x', '3.x', 'pypy-2.7', 'pypy-3.7', 'pypy-3.8' ]
+    name: Python ${{ matrix.python-version }} sample
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v3
-      with:
-        python-version: 3.10
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
 
     - run: pip install -r requirements.txt pyinstaller
     - run: pyinstaller --onefile main.py
