set python version to 3

--- a/.github/workflows/mac-distribution.yml
+++ b/.github/workflows/mac-distribution.yml
@@ -4,16 +4,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '2.x', '3.x', 'pypy-2.7', 'pypy-3.7', 'pypy-3.8' ]
-    name: Python ${{ matrix.python-version }} sample
+    # strategy:
+    #   matrix:
+    #     python-version: [ '2.x', '3.x', 'pypy-2.7', 'pypy-3.7', 'pypy-3.8' ]
+    name: mac distribution
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.x'
           architecture: x64
 
       - run: pip install -r requirements.txt pyinstaller
