--- a/.github/workflows/mac-distribution.yml
+++ b/.github/workflows/mac-distribution.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Package Application
         uses: JackMcKew/pyinstaller-action-linux@main
         with:
-          path: mac
+          path: .
 
       - uses: actions/upload-artifact@v2
         with:
