--- a/.github/workflows/mac-distribution.yml
+++ b/.github/workflows/mac-distribution.yml
@@ -30,4 +30,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ucla-cat
-          path: mac
+          path: dist/main/main
